# Goodreads-to-Anki

./: .gitignore  README.md  pyproject.toml
goodreads_to_anki/: __init__.py  _util.py  browser.py  cli.py  config.py  covers.py  enrich.py  models.py  pipeline.py
goodreads_to_anki/anki/: __init__.py  card_templates.py  exporter.py
goodreads_to_anki/sources/: __init__.py  base.py  csv_source.py  rss_source.py
tests/: sample_goodreads_export.csv  test_browser.py  test_csv_source.py  test_enrich.py
