[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goodreads-to-anki"
version = "0.1.0"
description = "Turn your Goodreads library into an Anki deck."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache 2.0" }
dependencies = [
    "genanki>=0.13.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
browser = ["selenium>=4.10", "webdriver-manager>=4.0"]
dev = ["pytest>=7.0"]

[project.scripts]
goodreads-to-anki = "goodreads_to_anki.cli:main"

[tool.setuptools.packages.find]
include = ["goodreads_to_anki*"]
